--- a/src/main/resources/templates/layouts/_mainLayout.html
+++ b/src/main/resources/templates/layouts/_mainLayout.html
@@ -15,6 +15,10 @@
 
     <!-- Fonts and icons -->
     <script th:src="@{/assets/js/plugin/webfont/webfont.min.js}"></script>
+
+        <!-- Sweet Alert -->
+    <script th:src="@{/assets/js/plugin/sweetalert/sweetalert.min.js}"></script>
+    
     <script>
       WebFont.load({
         google: { families: ["Public Sans:300,400,500,600,700"] },
@@ -38,7 +42,7 @@
     <link rel="stylesheet" th:href="@{/assets/css/plugins.min.css}" />
     <link rel="stylesheet" th:href="@{/assets/css/kaiadmin.min.css}" />
 
-
+ 
   </head>
   <body>
     <div class="wrapper">
@@ -93,12 +97,7 @@
                   </ul>
                 </div>
               </li>
-              <li class="nav-section">
-                <span class="sidebar-mini-icon">
-                  <i class="fa fa-ellipsis-h"></i>
-                </span>
-                <h4 class="text-section">Components</h4>
-              </li>
+             
               <li class="nav-item">
                 <a data-bs-toggle="collapse" href="#base">
                   <i class="fas fa-layer-group"></i>
@@ -122,9 +121,13 @@
                         <span class="sub-item">Docentes</span>
                       </a>
                     </li>
+                  
+                   
                   </ul>
                 </div>
               </li>
+          
+             
             </ul>
           </div>
         </div>
@@ -463,7 +466,7 @@
                   >
                     <div class="avatar-sm">
                       <img
-                        src="assets/img/profile.jpg"
+                        th:src="@{/assets/img/profile.jpg}"
                         alt="..."
                         class="avatar-img rounded-circle"
                       />
@@ -479,7 +482,7 @@
                         <div class="user-box">
                           <div class="avatar-lg">
                             <img
-                              th:src="@{/assets/img/profile.jpg}"
+                              src="assets/img/profile.jpg"
                               alt="image profile"
                               class="avatar-img rounded"
                             />
@@ -511,15 +514,16 @@
               </ul>
             </div>
           </nav>
+          <!-- End Navbar -->
         </div>
 
         <div class="container">
           <div class="page-inner">
-
-            <div layout:fragment="content">
-              
-            </div>
             
+            <div layout:fragment="content">
+
+            </div>
+        
           </div>
         </div>
 
@@ -759,7 +763,7 @@
     <script th:src="@{/assets/js/plugin/chart.js/chart.min.js}"></script>
 
     <!-- jQuery Sparkline -->
-    <script th:src="@{/assets/js/plugin/jquery.sparkline/jquery.sparkline.min.js}"></script>
+      <script th:src="@{/assets/js/plugin/jquery.sparkline/jquery.sparkline.min.js}"></script>
 
     <!-- Chart Circle -->
     <script th:src="@{/assets/js/plugin/chart-circle/circles.min.js}"></script>
@@ -774,12 +778,12 @@
     <script th:src="@{/assets/js/plugin/jsvectormap/jsvectormap.min.js}"></script>
     <script th:src="@{/assets/js/plugin/jsvectormap/world.js}"></script>
 
-    <!-- Sweet Alert -->
-    <script th:src="@{/assets/js/plugin/sweetalert/sweetalert.min.js}"></script>
+
 
     <!-- Kaiadmin JS -->
     <script th:src="@{/assets/js/kaiadmin.min.js}"></script>
 
+ 
     <script>
       $("#lineChart").sparkline([102, 109, 120, 99, 110, 105, 115], {
         type: "line",
@@ -798,7 +802,7 @@
         lineColor: "#f3545d",
         fillColor: "rgba(243, 84, 93, .14)",
       });
- 
+
       $("#lineChart3").sparkline([105, 103, 123, 100, 95, 105, 115], {
         type: "line",
         height: "70",
